added fake smtp in forgot password and made sure to verify the email and username before