@@ -16,6 +16,11 @@
             <version>22</version>
         </dependency>
         <dependency>
+        <groupId>org.mindrot</groupId>
+        <artifactId>jbcrypt</artifactId>
+        <version>0.4</version>
+    </dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>19</version>
@@ -67,7 +72,18 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.26</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>1.6.7</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -77,6 +93,10 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>21</release>
+                    <compilerArgs>
+                    <arg>--add-modules</arg>
+                    <arg>java.base</arg>
+                </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
